--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,9 @@
-ARG VARIANT=3.1
-FROM mcr.microsoft.com/devcontainers/ruby:${VARIANT}
+FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu-22.04
 
-# [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
-ARG NODE_VERSION="none"
-RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
+# Installing essential packages
+RUN apt update && export DEBIAN_FRONTEND=noninteractive \
+    && apt -y install --no-install-recommends \
+    build-essential libpq-dev python3
 
-# [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends \
-#     git build-essential wget curl gzip xz-utils
-
-RUN gem install foreman
+# Set zsh as default shell for vscode user
+RUN chsh -s /bin/zsh vscode
