--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
 	"features": {
 		"ghcr.io/devcontainers/features/sshd:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-			"packages": "libpq-dev" // For pg gem
+			"packages": "libpq-dev, libvips" // For pg gem
 		},
 		"ghcr.io/devcontainers/features/git:1": {
 			"version": "latest"
 		},
 		"ghcr.io/devcontainers/features/ruby:1": {
-			"version": "3.1.3"
+			"version": "3.2.0"
 		},
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": 19
