🚀 Updated Ruby version and adjusted devcontainer.json to the new format

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,13 +6,13 @@
 	"features": {
 		"ghcr.io/devcontainers/features/sshd:1": {},
 		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-			"packages": "libpq-dev, libvips" // For pg gem
+			"packages": "libpq-dev, libvips"
 		},
 		"ghcr.io/devcontainers/features/git:1": {
 			"version": "latest"
 		},
 		"ghcr.io/devcontainers/features/ruby:1": {
-			"version": "3.2.0"
+			"version": "3.2.1"
 		},
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": 19
@@ -28,9 +28,17 @@
 		}
 	},
 
-	"extensions": [
-		"rebornix.Ruby"
-	],
+	// Configure tool-specific properties.
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Shopify.ruby-lsp",
+				"esbenp.prettier-vscode",
+				"ms-vscode.vscode-typescript-tslint-plugin",
+				"ms-vscode.vscode-types"
+			]
+		}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
@@ -39,8 +47,6 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": ".devcontainer/boot.sh"
 
-	// Configure tool-specific properties.
-	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
