Update common-utils dep

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,10 +17,10 @@
 		"ghcr.io/devcontainers/features/node:1": {
 			"version": 19
 		},
-		"ghcr.io/devcontainers/features/common-utils:1": {
+		"ghcr.io/devcontainers/features/common-utils:2": {
 			"username": "vscode",
-			"uid": 1000,
-			"gid": 1000,
+			"userUid": 1000,
+			"userGid": 1000,
 			"installZsh": true,
 			"installOhMyZsh": true,
 			"configureZshAsDefaultShell": true,
