Deleting extra extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,12 +31,7 @@
   // Configure tool-specific properties.
   "customizations": {
     "vscode": {
-      "extensions": [
-        "Shopify.ruby-lsp",
-        "esbenp.prettier-vscode",
-        "ms-vscode.vscode-typescript-tslint-plugin",
-        "ms-vscode.vscode-types"
-      ]
+      "extensions": ["Shopify.ruby-lsp"]
     }
   },
 
