--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3"
-
 services:
   app:
+    container_name: app # This is the name of the container in the Dockerfile, not the name of the service in the docker-compose.yml file
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
