--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
+    env_file:
+      - devcontainer.env
     volumes:
       - ../:/workspaces/app:cached
     command: sleep infinity
